@@ -452,6 +452,24 @@ name|api
 operator|.
 name|records
 operator|.
+name|ApplicationResourceUsageReport
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
 name|FinalApplicationStatus
 import|;
 end_import
@@ -3247,14 +3265,26 @@ name|getDiagnostics
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|jobStatus
-operator|.
-name|setNeededMem
-argument_list|(
+name|ApplicationResourceUsageReport
+name|resourceUsageReport
+init|=
 name|application
 operator|.
 name|getApplicationResourceUsageReport
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|resourceUsageReport
+operator|!=
+literal|null
+condition|)
+block|{
+name|jobStatus
+operator|.
+name|setNeededMem
+argument_list|(
+name|resourceUsageReport
 operator|.
 name|getNeededResources
 argument_list|()
@@ -3267,10 +3297,7 @@ name|jobStatus
 operator|.
 name|setNumReservedSlots
 argument_list|(
-name|application
-operator|.
-name|getApplicationResourceUsageReport
-argument_list|()
+name|resourceUsageReport
 operator|.
 name|getNumReservedContainers
 argument_list|()
@@ -3280,10 +3307,7 @@ name|jobStatus
 operator|.
 name|setNumUsedSlots
 argument_list|(
-name|application
-operator|.
-name|getApplicationResourceUsageReport
-argument_list|()
+name|resourceUsageReport
 operator|.
 name|getNumUsedContainers
 argument_list|()
@@ -3293,10 +3317,7 @@ name|jobStatus
 operator|.
 name|setReservedMem
 argument_list|(
-name|application
-operator|.
-name|getApplicationResourceUsageReport
-argument_list|()
+name|resourceUsageReport
 operator|.
 name|getReservedResources
 argument_list|()
@@ -3309,10 +3330,7 @@ name|jobStatus
 operator|.
 name|setUsedMem
 argument_list|(
-name|application
-operator|.
-name|getApplicationResourceUsageReport
-argument_list|()
+name|resourceUsageReport
 operator|.
 name|getUsedResources
 argument_list|()
@@ -3321,6 +3339,7 @@ name|getMemory
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 return|return
 name|jobStatus
 return|;
