@@ -62,16 +62,6 @@ end_import
 
 begin_import
 import|import
-name|junit
-operator|.
-name|framework
-operator|.
-name|Assert
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -339,6 +329,16 @@ operator|.
 name|util
 operator|.
 name|Records
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
 import|;
 end_import
 
@@ -841,6 +841,37 @@ name|jobFile
 init|=
 literal|"dummy-path/job.xml"
 decl_stmt|;
+try|try
+block|{
+name|JobStatus
+name|status
+init|=
+name|TypeConverter
+operator|.
+name|fromYarn
+argument_list|(
+name|mockReport
+argument_list|,
+name|jobFile
+argument_list|)
+decl_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|npe
+parameter_list|)
+block|{
+name|Assert
+operator|.
+name|fail
+argument_list|(
+literal|"Type converstion from YARN fails for jobs without "
+operator|+
+literal|"ApplicationUsageReport"
+argument_list|)
+expr_stmt|;
+block|}
 name|ApplicationResourceUsageReport
 name|appUsageRpt
 init|=
